# python-client

./: .gitignore  LICENSE  README.md  client_test.py  pyproject.toml  requirements.txt
.github/workflows/: create-release.yml  docs.yml  main.yml  pr.yml  publish.yml  pypi-release.yml  python-package.yml  test-package.yml  test-publish.yml
docs/: README.md
docs/source/: conf.py  index.rst  modules.rst  predictionguard.rst  quick_start.rst  requirements.rst
examples/: audio.ipynb  chat.ipynb  completions.ipynb  detokenize.ipynb  documents.ipynb  embeddings.ipynb  factuality.ipynb  injection.ipynb  pii.ipynb  rerank.ipynb  responses.ipynb  sentiment.ipynb  tokenize.ipynb  toxicity.ipynb  translation.ipynb
predictionguard/: __init__.py  client.py  version.py
predictionguard/resources/: completions.py
predictionguard/resources/chat/: completions.py
predictionguard/source/predictionguard/: chat.py  completions.py  embeddings.py  factuality.py  injection.py  pii.py  tokenize.py  toxicity.py  translate.py
predictionguard/src/: audio.py  chat.py  completions.py  detokenize.py  documents.py  embeddings.py  factuality.py  injection.py  mcp_servers.py  mcp_tools.py  models.py  pii.py  rerank.py  responses.py  tokenize.py  toxicity.py  translate.py
tests/: test_api.py  test_audio.py  test_chat.py  test_completions.py  test_detokenize.py  test_documents.py  test_embeddings.py  test_factuality.py  test_injection.py  test_mcp_servers.py  test_mcp_tools.py  test_models.py  test_pii.py  test_rerank.py  test_responses.py  test_tokenize.py  test_toxicity.py  test_translate.py
