[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "predictionguard"
authors = [
    {name = "Jacob Mansdorfer", email = "jacob@predictionguard.com"},
    {name = "Daniel Whitenack", email = "dan@predictionguard.com"}
    ]
readme = "README.md"
requires-python = ">=3.12.8"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
description-file = "README.md"
dependencies = [
    "tabulate>=0.9.0",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx_rtd_theme",
    "black",
]

[project.urls]
Home = "https://predictionguard.com"

[tool.hatch.version]
path = "predictionguard/version.py"