[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "predictionguard"
authors = [
    {name = "Jacob Mansdorfer", email = "jacob@predictionguard.com"},
    {name = "Daniel Whitenack", email = "dan@predictionguard.com"}
    ]
description = "The official Prediction Guard Python SDK"
description-file = "README.md"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version"]
dependencies = [
    "tabulate>=0.9.0",
    "requests>=2.32.5",
]

[project.urls]
Homepage = "https://predictionguard.com"
Documentation = "https://predictionguard.github.io/python-client/"
Repository = "https://github.com/predictionguard/python-client.git"
Issues = "https://github.com/predictionguard/python-client/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx_rtd_theme",
    "black",
]

[tool.hatch.version]
path = "predictionguard/version.py"